@@ -6,6 +6,3 @@ before-all::
 	$(MKDIRS) $(GNUSTEP_OBJ_DIR)/Views
 	$(MKDIRS) $(GNUSTEP_OBJ_DIR)/Misc
 	$(MKDIRS) $(GNUSTEP_OBJ_DIR)/Models
-
-after-all::
-	$(MAKE) -C Tools install
