@@ -1,0 +1,9 @@
+ADDITIONAL_INCLUDE_DIRS += -I. -I../../../..
+
+ADDITIONAL_OBJCFLAGS += -Wall -Wno-protocol
+
+ifeq ($(OBJC_RUNTIME_LIB), apple)
+ADDITIONAL_OBJCFLAGS += -I../../../../Misc -include GNUstep.h $(ADDITIONAL_FRAMEWORK_DIRS)
+else
+ADDITIONAL_LDFLAGS += -L../../../../TalkSoupBundles/TalkSoupBundles.framework/Versions/Current
+endif
